--- a/package.json
+++ b/package.json
@@ -1,10 +1,13 @@
 {
   "name": "vite-min-template",
+  "source": "src/index.html",
   "private": true,
   "version": "0.0.0",
   "type": "module",
   "scripts": {
-    "dev": "vite",
+    "parcel": "parcel",
+    "vite": "vite",
+
     "build": "tsc && vite build",
     "lint": "eslint src --ext ts,tsx --report-unused-disable-directives --max-warnings 0",
     "preview": "vite preview"
@@ -12,6 +15,8 @@
   "dependencies": {
     "@mantine/core": "7.5.3",
     "@mantine/hooks": "7.5.3",
+    "@modulz/radix-icons": "^4.0.0",
+    "@radix-ui/react-icons": "^1.3.0",
     "react": "^18.2.0",
     "react-dom": "^18.2.0"
   },
@@ -24,9 +29,11 @@
     "eslint": "^8.53.0",
     "eslint-plugin-react-hooks": "^4.6.0",
     "eslint-plugin-react-refresh": "^0.4.4",
+    "parcel": "^2.11.0",
     "postcss": "^8.4.32",
     "postcss-preset-mantine": "1.13.0",
     "postcss-simple-vars": "^7.0.1",
+    "process": "^0.11.10",
     "typescript": "^5.3.3",
     "vite": "^5.0.10"
   },
