--- a/package.json
+++ b/package.json
@@ -7,35 +7,35 @@
   "scripts": {
     "parcel": "parcel",
     "vite": "vite",
-
     "build": "tsc && vite build",
     "lint": "eslint src --ext ts,tsx --report-unused-disable-directives --max-warnings 0",
-    "preview": "vite preview"
+    "preview": "vite preview",
+    "upgrade": "yarn upgrade-interactive",
+    "yarn": "yarn install"
   },
+  "packageManager": "yarn@4.1.0",
   "dependencies": {
-    "@mantine/core": "7.5.3",
-    "@mantine/hooks": "7.5.3",
-    "@modulz/radix-icons": "^4.0.0",
-    "@radix-ui/react-icons": "^1.3.0",
+    "@mantine/core": "7.6.1",
+    "@mantine/hooks": "7.6.1",
+    "@tabler/icons-react": "^2.47.0",
     "react": "^18.2.0",
     "react-dom": "^18.2.0"
   },
   "devDependencies": {
-    "@types/react": "^18.2.36",
-    "@types/react-dom": "^18.2.14",
-    "@typescript-eslint/eslint-plugin": "^6.9.1",
-    "@typescript-eslint/parser": "^6.9.1",
+    "@types/react": "^18.2.61",
+    "@types/react-dom": "^18.2.19",
+    "@typescript-eslint/eslint-plugin": "^7.1.0",
+    "@typescript-eslint/parser": "^7.1.0",
     "@vitejs/plugin-react": "^4.2.1",
-    "eslint": "^8.53.0",
+    "eslint": "^8.57.0",
     "eslint-plugin-react-hooks": "^4.6.0",
-    "eslint-plugin-react-refresh": "^0.4.4",
-    "parcel": "^2.11.0",
-    "postcss": "^8.4.32",
+    "eslint-plugin-react-refresh": "^0.4.5",
+    "parcel": "^2.12.0",
+    "postcss": "^8.4.35",
     "postcss-preset-mantine": "1.13.0",
     "postcss-simple-vars": "^7.0.1",
     "process": "^0.11.10",
     "typescript": "^5.3.3",
-    "vite": "^5.0.10"
-  },
-  "packageManager": "yarn@4.0.2"
+    "vite": "^5.1.4"
+  }
 }
